# strelligence-contract

./: .gitignore  Cargo.toml  README.md  SECURITY.md  clippy.toml
.cargo/: config.toml
.github/workflows/: ci.yml
contracts/access-control/: Cargo.toml
contracts/access-control/src/: contract.rs  errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/automation-rules/: Cargo.toml
contracts/automation-rules/src/: bench.rs  contract.rs  errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/batch-ops/: Cargo.toml
contracts/batch-ops/src/: contract.rs  errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/cross-contract/: Cargo.toml
contracts/cross-contract/src/: contract.rs  errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/emergency-pause/: Cargo.toml
contracts/event-filter/: Cargo.toml
contracts/gas-optimizer/: Cargo.toml
contracts/hello-world/: Cargo.toml
contracts/metadata-registry/: Cargo.toml
contracts/migration/: Cargo.toml
contracts/multi-sig/: Cargo.toml
contracts/recurring-registry/: Cargo.toml
contracts/snapshots/: Cargo.toml
contracts/upgradeable/: Cargo.toml
contracts/versioning/: Cargo.toml
docs/: automation-rules.md  events.md  integration-guide.md  metadata-registry.md  recurring-registry.md  storage-analysis.md
examples/event-indexer/: README.md  package.json
scripts/: build.sh  debug.sh  deploy-mainnet.sh  deploy-testnet.sh  initialize.sh  query.sh  test-interaction.sh
tests/: Cargo.toml
tests/integration/: edge_cases.rs  full_lifecycle.rs  mod.rs  recurring_metadata_integration.rs
(+76 files in other folders)
