[workspace]
resolver = "2"

members = [
    "contracts/recurring-registry",
    "contracts/metadata-registry",
    "contracts/automation-rules",
    "tests"
]

[workspace.dependencies]
soroban-sdk = "=25.3.1"
ed25519-dalek = ">=2.0, <3.0"

[workspace.lints.rust]
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true