[workspace]
resolver = "2"

members = [
    "contracts/recurring-registry",
    "contracts/metadata-registry",
    "contracts/automation-rules",
    "contracts/upgradeable",
    "contracts/multi-sig",
    "contracts/snapshots",
    "tests"
]

[workspace.dependencies]
soroban-sdk = "=25.3.1"
ed25519-dalek = ">=2.0, <3.0"

[workspace.lints.rust]
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[workspace.lints.clippy]
unwrap_used = "allow"
expect_used = "allow"
panic = "warn"
too_many_arguments = "allow"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true